tests/auto_generated/AUL2-757_auto.spec.ts
// Auto-generado por Agente 2.0 con contexto Angular
// Issue: AUL2-757 - Fecha: 2025-08-01 15:30:04.806567

import { test, expect } from '@playwright/test';
import { config } from 'dotenv';
config();
import { LoginPage } from '../../pages/login.page';

test.describe('AUL2-757 - Casos generados', () => {
  test.beforeEach(async ({ page }) => {
    const loginPage = new LoginPage(page);
    await loginPage.goto();
    await loginPage.login(process.env.USERNAME!, process.env.PASSWORD!);
  });

  test('Crear pantalla genérica de error', async ({ page }) => {
    // TODO: 1
    // TODO:  Ingresar al sistema con contraseña incorrecta
    // TODO:  2
    await page.locator('.error').click(); // error
    // Validación esperada: Se muestra la pantalla genérica de error.
  });

  test('Crear pantalla genérica de error', async ({ page }) => {
    // TODO: 1
    // TODO:  Ingresar al sistema con contraseña incorrecta
    // TODO:  2
    // TODO:  Estar desconectado de la red de UCC
    // TODO:  3
    await page.locator('.error').click(); // error
    // Validación esperada: Se muestra la pantalla genérica de error.
  });

  test('Crear pantalla genérica de error', async ({ page }) => {
    // TODO: 1
    // TODO:  Ingresar al sistema con contraseña incorrecta
    // TODO:  2
    // TODO:  Estar conectado a otra red
    // TODO:  3
    await page.locator('.error').click(); // error
    // Validación esperada: Se muestra la pantalla genérica de error.
  });

  test('Crear pantalla genérica de error', async ({ page }) => {
    // TODO: 1
    // TODO:  Ingresar al sistema con contraseña incorrecta
    // TODO:  2
    // TODO:  Estar conectado a la VPN
    // TODO:  3
    await page.locator('.error').click(); // error
    // Validación esperada: Se muestra la pantalla genérica de error.
  });

  test('Crear pantalla genérica de error', async ({ page }) => {
    // TODO: 1
    // TODO:  Ingresar al sistema con contraseña incorrecta
    // TODO:  2
    // TODO:  No tener cuenta en el SIUCC
    // TODO:  3
    await page.locator('.error').click(); // error
    // Validación esperada: Se muestra la pantalla genérica de error.
  });

  test('Crear pantalla genérica de error', async ({ page }) => {
    // TODO: 1
    // TODO:  Ingresar al sistema con contraseña incorrecta
    // TODO:  2
    // TODO:  No estar en la red de UCC
    // TODO:  3
    // TODO:  No tener cuenta en el SIUCC
    // TODO:  4
    await page.locator('.error').click(); // error
    // Validación esperada: Se muestra la pantalla genérica de error.
  });

});
